--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 baseURL = "https://examplesite.com"
 languageCode = "en"
 title = "Hargo | Hugo Ecommerce Site"
-theme = "hargo"
+theme = "Themefisher"
 summaryLength = "20"
 paginate = 10
 disqusShortname = ""
