--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://examplesite.com"
+baseURL = "https://yoga-six.vercel.app"
 languageCode = "en"
 title = "Hargo | Hugo Ecommerce Site"
 theme = "Themefisher"
