--- a/data/contact.yml
+++ b/data/contact.yml
@@ -4,7 +4,7 @@ contact:
   # office
   office:
     title : "Central Office"
-    content : "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna"
+    content : "COlumbia"
     # other information comes from "config.toml"
 
   # opennig hour
