--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ disqusShortname = ""
 logo = "images/logo.png"
 home = "Home"
 # Meta data
-description = "ALL ABILITIES, ALL BODIES, ALL AGES"
+description = "IMAGE Skincare - IMAGE NOW. Age later.&ndash; Image Skincare Online"
 author = "Themefisher"
 # google map
 gmapAPI = "https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"
